--- a/movie/templates/home/home.html
+++ b/movie/templates/home/home.html
@@ -5,8 +5,8 @@
   </p>
   <br>
 <dl>
-  <dt>Browsing by rank</dt>
-  <dd>- Movies sorted by ranking, one movie per page</dd>
+  <p>Welcome to the Movie browsing web application, Movies are sorted and browsed by their rank.
+  You can register for an account or login to add a review to a movie.</p>
 </dl>
 </main>
 {% endblock %}
